<resources>
    <string name="app_name">Lab 4: Firebase</string>
    <string name="fab_icon">FAB Icon</string>
    <string name="student_form_index">Index</string>
    <string name="student_form_name">Name</string>
    <string name="student_form_last_name">Last name</string>
    <string name="student_form_phone_number">Phone number</string>
    <string name="student_form_address">Address</string>
    <string name="student_form_submit">Submit</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="student_item_name_text">%s %s</string>
    <string name="add_student_button">Add student</string>
    <string name="student_item_edit_button_text">Edit</string>
    <string name="student_item_delete_button_text">Delete</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_out_menu_item">Sign out</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>